--- a/frontend/src/pages/dashboard.html
+++ b/frontend/src/pages/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DevNote - Dashboard</title>
+    <title>DevNote</title>
 
     <!-- Preload fonts to avoid CLS -->
     <link rel="preconnect" href="https://cdn.jsdelivr.net">
